# home-production

./: .bazelrc  .editorconfig  README.md  WORKSPACE
ansible/roles/consul-node/defaults/: main.yml
ansible/roles/consul-node/files/: consul.service
ansible/roles/consul-node/handlers/: main.yml
ansible/roles/consul-node/tasks/: main.yml
assets/: .gitignore  .terraform.lock.hcl  README.md  backup.tf  base.tf  deprecated_backup.tf  deprecated_vault.tf  dns.tf  gensecrets.sh  iam.tf  instances.tf  instancesetup.sh  linode.tf  mail.tf  variables.tf  writegcpcreds.sh
assets/ssh/: home-desktop.pub
cloud/: .gitignore  install.yml  inventory
cloud/assets/: .gitignore  .terraform.lock.hcl  DEPRECATED  gcpbackup.tf  gcpdns.tf  gcpvault.tf  provider.tf  variables.tf
containers/: BUILD.bazel  bazelstatus.sh
hosts/: provision.yml  update.yml
hosts/inventory/: cloud-instances.yml
hosts/tasks/snowball/: main.yml
house/: README.md  install  install.yml  inventory
house/config/: consul.hcl
house/group_vars/: all.yml
house/home-dns-update/: .gitignore  gcloud-dns-update.py  run
house/jobs/: README.md  house-uids.auto.tfvars  images.auto.tfvars  jobs.tf  nomadvault.tf  provider.tf  update-secrets  variables.tf
house/jobs/conf/: homeassistant.yml  synapse.yml
house/jobs/nomad/: access-secrets-policy.hcl  apcupsd_exporter.nomad  grafana.nomad  homeassistant.nomad  moneydance.nomad  nginx.nomad  plex.nomad  prometheus.nomad  synapse.nomad  unifi.nomad
house/nomad/: .gitignore  .terraform.lock.hcl  grafana.nomad  images.auto.tfvars  jobs.tf  moneydance.nomad  nginx.nomad  nomad-server-policy.hcl  plex.nomad  prometheus.nomad  provider.tf  synapse.nomad  terraform.tf  unifi.nomad  update-secrets  vault.tf
house/nomad/conf/: grafana.ini
house/testing/: Vagrantfile
tools/: gcloud-requirements.in  gcloud-requirements.txt  pytest-requirements.txt
tools/dnsupdate/: BUILD.bazel  README
tools/latestimage/: BUILD.bazel  README.md  latestimage.py  latestimage_test.py
tools/latestimage/testdata/: alertmanager_images.json  grafana_images.json  synapse_images.json
(+137 files in other folders)
