load("@pytest_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_binary(
    name = "latestimage",
    srcs = ["latestimage.py"],
)

py_library(
    name = "latestimage_lib",
    srcs = ["latestimage.py"],
)

filegroup(
    name = "testdata",
    testonly = 1,
    srcs = glob(["testdata/*.json"]),
)

py_test(
    name = "latestimage_test",
    srcs = ["latestimage_test.py"],
    data = [":testdata"],
    deps = [
        ":latestimage_lib",
        requirement("pytest"),
    ],
)
